# vast-rag

./: .gitignore  HANDOFF.md  LICENSE  README.md  RELEASE_v1.0.md  pyproject.toml
deployment/: .gitignore  README.md  common.sh  deploy.sh  install.sh  setup.sh  uninstall.sh  verify.sh
deployment/templates/: .env.template  .mcp.json.example  config.yaml.example
docs/plans/: 2026-02-12-vast-rag-implementation.md  2026-02-13-vast-rag-deployment-implementation.md  2026-02-13-vast-rag-deployment.md
src/vast_rag/: __init__.py  __main__.py  config.py  indexer.py  server.py  types.py
src/vast_rag/core/: chunker.py  embeddings.py  hash_index.py  vector_store.py  watcher.py
src/vast_rag/mcp/: __init__.py  server.py
src/vast_rag/parsers/: __init__.py  base.py  docx.py  factory.py  html.py  markdown.py  pdf.py  text.py
tests/integration/: test_e2e_pipeline.py  test_indexer.py
tests/unit/: test_chunker.py  test_config.py  test_embeddings.py  test_hash_index.py  test_mcp_server.py  test_parsers.py  test_server_entry.py  test_vector_store.py  test_watcher.py
